# mipt-3d-graphics-course

./: .gitignore
task1/: CMakeLists.txt  build.sh
task1/assets/: first_triangle.frag  fragment_shader.frag  second_triangle.frag  sphere.frag  sphere.vert  vertex_shader.vert
task1/src/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
task2/: CMakeLists.txt  build.sh
task2/assets/meshes/: bullet_sphere.fbx  floor.fbx
task2/assets/shaders/: basic.frag  basic.vert
task2/src/: CMakeLists.txt  camera.cpp  camera.hpp  enemy.cpp  enemy.hpp  game_object.hpp  input.cpp  input.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_object.hpp  player.cpp  player.hpp  random.cpp  random.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
